--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "firebase": "^5.11.0",
+    "bootstrap-4-react": "0.0.58",
+    "date-fns": "^1.30.1",
+    "firebase": "^5.11.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-calendar": "^2.18.1",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
+    "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.3",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
