--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.3.1",
     "bootstrap-4-react": "0.0.58",
     "date-fns": "^1.30.1",
+    "dotenv": "^8.0.0",
     "firebase": "^5.11.1",
+    "formik": "^1.5.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-calendar": "^2.18.1",
@@ -19,7 +21,8 @@
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
