--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
     "firebase": "^5.11.1",
-    "formik": "^1.5.4",
+    "formik": "^1.5.7",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-calendar": "^2.18.1",
+    "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
@@ -28,6 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:update": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
+    "react-test-renderer": "^16.8.6",
+    "redux-mock-store": "^1.5.3"
   }
 }
